[#16] 검색기능ì(#20)