@@ -26,7 +26,7 @@ repositories {
 
     //komoran
     google()
-    maven { url 'https://jitpack.io' }
+    maven {url = uri('https://jitpack.io')  }
 }
 
 dependencies {
@@ -60,9 +60,8 @@ dependencies {
 
     //redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
 
-    // swagger
-    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6'
 
 }
 
@@ -91,4 +90,10 @@ tasks.named('test') {
 
 tasks.named('checkstyleTest') {
     enabled = false
+}
+//Test 관련 의존성
+tasks.withType(Test) {
+    useJUnitPlatform()  //JUnit 5 기반 테스트를 사용하겠다는 설정
+    jvmArgs "-XX:+EnableDynamicAgentLoading" //ByteBuddy/Mockito 등의 동적 에이전트 경고 제거를 위한 JVM 플래그
+    jvmArgs '-Xshare:off' // JVM 아규먼트 설정
 }
